--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ font-size:32pt;
 }
 
 .durum{
-  margin-top:10px;
+  margin-top:40px;
   font-weight:bold;
 }
 
@@ -84,4 +84,28 @@ font-size:32pt;
   border:2px solid grey !important;
   box-shadow:0 0 10px grey;
 }
+
+
+
+/* upgradeli güncelleme sonrası kodlar */
+
+.secimler > span{
+  cursor:pointer;
+  border:1px solid white;
+  box-shadow: 0 0 10px gray;
+  border-radius:3px;
+  padding:3px;
+  background-color:white;
+  color:black;
+}
+
+
+#kurtar{
+  margin:20px;
+  padding:5px;
+  border-radius:3px;
+  display:none;
+}
+
+
 /* mert */
