Added move limit for spam

--- a/style.css
+++ b/style.css
@@ -107,5 +107,22 @@ font-size:32pt;
   display:none;
 }
 
+.secim{position:relative;}
+
+.limitler{
+  position:absolute;
+  left:40%;
+  top:25%;
+  font-weight:bold;
+  font-size:30pt;
+  color:red;
+  display:none;
+}
+
+.limitKilidi{
+  opacity:0.4;
+}
+
+
 
 /* mert */
