--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
 }
 
 body{
+    /* yazı seçimini kapat */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
     text-align:center;
     font-family:Asap, "sans-serif";
     background-color:#2b2a35;
